--- a/admin-accounts.html
+++ b/admin-accounts.html
@@ -9,5 +9,7 @@
     </div>
   </main>
   <footer class="footer">Admin - RightSpot</footer>
+  <script type="module" src="admin.js"></script>
 </body>
 </html>
+
