--- a/admin-bookings.html
+++ b/admin-bookings.html
@@ -24,5 +24,8 @@
   <footer class="footer">© 2025 RightSpot. All rights reserved.</footer>
 
   <script type="module" src="admin-bookings.js"></script>
+  <script type="module" src="admin.js"></script>
+
 </body>
 </html>
+
