--- a/admin.html
+++ b/admin.html
@@ -20,5 +20,8 @@
   </main>
 
   <footer class="footer">Admin - RightSpot</footer>
+  <script type="module" src="admin.js"></script>
+
 </body>
 </html>
+
