--- a/admin-bookings.html
+++ b/admin-bookings.html
@@ -17,15 +17,16 @@
   </header>
 
   <main style="max-width:1100px;margin:20px auto;padding:0 16px;">
-    <h2>Bookings Management</h2>
-    <div id="bookingsList" class="card"></div>
+    <h2>PG & Hostel Bookings Management</h2>
+    <div id="bookingsList" class="card">
+      <!-- Bookings will be loaded here by admin-bookings.js -->
+    </div>
   </main>
 
   <footer class="footer">© 2025 RightSpot. All rights reserved.</footer>
 
+  <!-- Ensure admin-bookings.js loads before admin.js -->
   <script type="module" src="admin-bookings.js"></script>
   <script type="module" src="admin.js"></script>
-
 </body>
 </html>
-
